--- a/app/src/main/res/layout/learning_leaders_item.xml
+++ b/app/src/main/res/layout/learning_leaders_item.xml
@@ -22,8 +22,8 @@
 
             <ImageView
                 android:id="@+id/clipboard"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="114dp"
+                android:layout_height="83dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
@@ -37,7 +37,7 @@
                 tools:srcCompat="@drawable/learner" />
 
             <TextView
-                android:id="@+id/coursesTitle"
+                android:id="@+id/name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -45,7 +45,6 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:text="Name"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="#9C27B0"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -53,17 +52,27 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/noteText"
+                android:id="@+id/hours"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="8dp"
-                android:text="Hours, Country"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginEnd="160dp"
+                android:layout_marginRight="160dp"
                 android:textColor="@android:color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/coursesTitle"
-                app:layout_constraintTop_toBottomOf="@+id/coursesTitle" />
+                app:layout_constraintStart_toEndOf="@+id/clipboard"
+                app:layout_constraintTop_toBottomOf="@+id/name" />
+
+            <TextView
+                android:id="@+id/country"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/hours"
+                app:layout_constraintTop_toBottomOf="@+id/name" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </FrameLayout>
