--- a/app/src/main/res/layout/skill_iq_leaders_item.xml
+++ b/app/src/main/res/layout/skill_iq_leaders_item.xml
@@ -22,8 +22,8 @@
 
             <ImageView
                 android:id="@+id/clipboard"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="216dp"
+                android:layout_height="70dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
@@ -36,7 +36,7 @@
                 tools:srcCompat="@drawable/skill" />
 
             <TextView
-                android:id="@+id/coursesTitle"
+                android:id="@+id/name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -44,7 +44,6 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:text="Name"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="#9C27B0"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -52,17 +51,30 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/noteText"
+                android:id="@+id/skill"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginTop="4dp"
+                android:layout_marginEnd="85dp"
+                android:layout_marginRight="85dp"
                 android:layout_marginBottom="8dp"
-                android:text="Skill IQ, Country"
                 android:textColor="@android:color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/coursesTitle"
-                app:layout_constraintTop_toBottomOf="@+id/coursesTitle" />
+                app:layout_constraintStart_toEndOf="@+id/clipboard"
+                app:layout_constraintTop_toBottomOf="@+id/name" />
+
+            <TextView
+                android:id="@+id/country"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/skill"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/skill" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </FrameLayout>
